--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,8 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.45f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\SeekingBehavioru.cs" />
+    <Compile Include="Assets\Scripts\PistolShoot.cs" />
     <Compile Include="Assets\PlayerController.cs" />
   </ItemGroup>
   <ItemGroup>
