--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\IDamager.cs" />
     <Compile Include="Assets\Scripts\SeekingBehavioru.cs" />
     <Compile Include="Assets\Scripts\PistolShoot.cs" />
+    <Compile Include="Assets\Scripts\IDamageable.cs" />
     <Compile Include="Assets\PlayerController.cs" />
   </ItemGroup>
   <ItemGroup>
