--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,11 +61,22 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.45f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\IDamager.cs" />
+    <Compile Include="Assets\Scripts\Entities\Entity.cs" />
+    <Compile Include="Assets\Scripts\Objects\Weapon\Sword.cs" />
+    <Compile Include="Assets\Scripts\Singleton.cs" />
     <Compile Include="Assets\Scripts\SeekingBehavioru.cs" />
-    <Compile Include="Assets\Scripts\PistolShoot.cs" />
+    <Compile Include="Assets\Scripts\Entities\BasicEnemyController.cs" />
+    <Compile Include="Assets\Scripts\IObjectController.cs" />
+    <Compile Include="Assets\Scripts\Objects\PistolShoot.cs" />
+    <Compile Include="Assets\Scripts\Enviroment\CameraController.cs" />
+    <Compile Include="Assets\Scripts\Entities\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Objects\Weapon\Gun.cs" />
+    <Compile Include="Assets\Scripts\Objects\IDamager.cs" />
+    <Compile Include="Assets\Scripts\Objects\IProjectile.cs" />
     <Compile Include="Assets\Scripts\IDamageable.cs" />
-    <Compile Include="Assets\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Objects\ProjectileController.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Helpers\Enums\DamageType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
